# QuantaLLM-SDK

./: .gitignore  .gitmodules  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
quantallm-core/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
quantallm-core/src/main/java/com/quantallm/: Backend.kt  ChatSession.kt  DeviceCapability.kt  GenerationParams.kt  GenerationResult.kt  InferenceEngine.kt  LicenseException.kt  LicenseKey.kt  ModelInfo.kt  ModelScanner.kt  QuantaLLM.kt
quantallm-llamacpp/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
quantallm-llamacpp/src/main/java/com/naman/quantallm/: LlamaJni.kt
quantallm-llamacpp/src/main/java/com/quantallm/llamacpp/: LlamaCppEngine.kt
quantallm-llamacpp/src/main/jni/: CMakeLists.txt  llama_jni.cpp
quantallm-onnx/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
quantallm-onnx/src/main/java/com/quantallm/onnx/: OnnxRuntimeEngine.kt
tools/: keygen.py
